[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", features = ["full"]}
axum = "0.3"
tower = "0.4"
hyper = "0.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tower-http = { version = "0.1", features =["cors"]}
cors = "0.1.0"
http = "0.2.9"
